--- a/package.json
+++ b/package.json
@@ -35,9 +35,10 @@
     "@angular/cli": "9.0.0-rc.7",
     "@angular/compiler-cli": "9.0.0-rc.7",
     "@angular/language-service": "~7.0.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "angular-cli-ghpages": "^0.6.2",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
