--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "^0.1000.7",
     "@angular/animations": "^10.0.9",
     "@angular/common": "^10.0.9",
     "@angular/compiler": "^10.0.9",
@@ -31,7 +32,6 @@
     "e2e": "ng e2e"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.10.0",
     "@angular/cli": "9.0.0-rc.7",
     "@angular/compiler-cli": "9.0.0-rc.7",
     "@angular/language-service": "~7.0.0",
